test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_max_value.sol
contract C layout at 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF {}
// ----
// UnimplementedFeatureError 1834: (0-90): Code generation is not supported for contracts with specified storage layout base.
